--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@
 # Mock Mode Toggle
 # true = Use mock data (no backend needed)
 # false = Use real API (requires VITE_API_BASE_URL)
-VITE_USE_MOCK=true
+VITE_USE_MOCK=false
 
 # API Base Domain (without /api/v1 - that's handled by the app)
 # Only needed when VITE_USE_MOCK=false
